# CLookup

./: README.md
CLookuP_Haskell/: clookup.cabal
CLookuP_Haskell/app/Modules/: MenuPrincipal.hi  MenuPrincipal.hs
CLookuP_Haskell/app/Utils/: Estudante.hs  LCC.hs  Monitor.hs  Professor.hs  SalaMonitoria.hs
haskell/: .gitignore  clookup.cabal
haskell/Database/Estudantes/: Estudantes.json
haskell/app/: Logado.hs  Main.hs  Repository.hs  Utils.hs
haskell/app/Controllers/: CadastroController.hs  EstudanteController.hs  LCCController.hs  LoginController.hs  ProfessorController.hs  SalaAulaController.hs  SalaController.hs  SalaMonitoriaController.hs
haskell/app/Menus/: Cadastro.hs  Calendario.hs  Cores.hs  Inicio.hs  Logado.hs  Login.hs  Util.hs
haskell/app/Models/: Estudante.hs  LCC.hs  Monitor.hs  Professor.hs  Sala.hs  SalaAula.hs  SalaMonitoria.hs  Usuario.hs
haskell/app/Models/Utils/: Cadastro.hs  Login.hs
prolog/: .gitattributes  .gitignore  DateUtils.pl  Main.pl  README.md  Repository.pl  init.pl
prolog/Controllers/: SalaController.pl  UsuarioController.pl
prolog/Menus/: Cadastro.pl  Inicio.pl  Logado.pl  Login.pl  Utils.pl
prolog/Models/: Reserva.pl  Sala.pl  Usuario.pl
