cabal-version:      3.0
name:               clookup
version:            0.1.0.0
license:            MIT
author:             Daniele, Gabrielly, Hebert, Maria Clara, Mateus
build-type:         Simple

common warnings
    ghc-options: -Wall

executable clookup
    import:           warnings

    main-is:          Main.hs

    other-modules:
        Repository
        Models.Estudante
        Models.LCC
        Models.Professor
        Models.SalaAula
        Models.SalaMonitoria
        Controllers.EstudanteController
        Controllers.LCCController
        Controllers.ProfessorController
        Controllers.SalaAulaController
        Controllers.SalaMonitoriaController
        Menus.Inicio
        Menus.Cadastro
        Menus.Util
        Menus.Calendario

    build-depends:    base ^>=4.17.2.1, aeson, bytestring, directory, filepath, time

    hs-source-dirs:   app

    default-language: GHC2021
