cabal-version:      3.0
name:               clookup
version:            0.1.0.0
license:            MIT
author:             Daniele, Gabrielly, Hebert, Maria Clara, Mateus
build-type:         Simple

common warnings
    ghc-options: -Wall

executable clookup
    import:           warnings

    main-is:          Main.hs

    other-modules:
        Repository
        Utils
        Models.Estudante
        Models.Professor
        Models.Sala
        Models.Usuario
        Controllers.EstudanteController
        Controllers.ProfessorController
        Controllers.SalaController
        Menus.Inicio
        Menus.Cadastro
        Menus.Util
        Menus.Calendario
        Menus.Logado
        Menus.Login
        Menus.Cores

    build-depends:    base ^>=4.17.2.1, aeson, bytestring, directory, filepath, time >= 1.12 , ansi-terminal

    hs-source-dirs:   app

    default-language: GHC2021
